Se creo habitaciones

--- a/hoteles/src/app/home/home.component.html
+++ b/hoteles/src/app/home/home.component.html
@@ -1,3 +1,7 @@
+<header>
+    <app-menu></app-menu>
+</header>
+
 <section id="banner">
     <div class="container">
         <app-formularioreservas></app-formularioreservas>
